--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "node": "14.15.5"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.1",
     "natural": "^5.1.13"
   }
 }
